# tx-fees

./: .dockerignore  .envs  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-02dd1cd261c703f038fbb71d2be2f40712735423fede01c0f32ff788f87e87b9.json  query-1f89f78d338ff76d2cc08d6044d22b9e3acdbae83077f20e96bb24a24b3bd606.json  query-5f81d60f4a8ff94c7099a6e197f5af6ccc8ffacd5816ce70395a728d34b3f4a2.json  query-701617f43ebc090663919935de0f024f8546f50719f0df60373c490564799a6d.json  query-72d651af8ab1dda313a9f2f5ff0e2fd587e58f2aa34760d193012f625b6c71af.json  query-730019216c07919e4aad2bbba990af0355f29aaef6771aaa168e88d7afeb7f05.json  query-86654aff15b7c55aa9d67d5f5bcb45856e59d68651ddef7be70d8879d2ed8f12.json  query-8aee6bc6a61bd5d037228a278f13c5d426fd73f6738799375cff8a6a78203087.json  query-9b3c26cb1251a7117816cfb1370348fc9b2d62ddbcefd0f0484df45cc4258eb2.json  query-af8cad22891b1bbe910134ab6f8362a76876b807b53d0c11e444394bc6fc6c88.json  query-b3dca0d8b85cc4587b959f6e114f66e3a9b08c01b9b2943463c11297d3c83464.json  query-bc58f2abe56b07a10128019d4f46bf01dfa6826de6e3f2d43f7b9528bfe9d174.json  query-bcda5bd076ac3429d60ef7ffc80ca0b1b2dace14b6a3d5ddd297e9f0226339c5.json  query-eea17ca1da56622d5355fc7eaafe66910ca011b9bc8ea447113e134eb4210728.json
migrations/: 20250130005037_init_blocks.sql  20250130005040_init_txs.sql  20250131112304_batch_jobs.sql
src/: args.rs  components.rs  configs.rs  helpers.rs  lib.rs  main.rs  price_providers.rs
src/components/: api.rs  batch.rs  fee_tracker.rs  job_executor.rs  realtime.rs  realtime_data.rs
src/components/api/: fees.rs  jobs.rs
tests/components/: api.rs  utils.rs
