[package]
name = "tx-fees"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.9", features = [
    "full",
    "provider-ws",
    "providers",
    "rpc",
] }
alloy-contract = { version = "0.0.0-reserved" }
eyre = "0.6.12"
futures-util = "0.3.31"
reqwest = "0.12.12"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "tls-rustls", "runtime-tokio", "bigdecimal"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
