[package]
name = "tx-fees"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tx-fees"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
alloy = { version = "0.9", features = [
    "full",
    "provider-ws",
    "providers",
    "rpc",
] }
alloy-contract = { version = "0.0.0-reserved" }
chrono = { version = "0.4.39", features = ["serde"] }
eyre = "0.6.12"
futures-util = "0.3.31"
redis = { version = "0.28.2", features = ["tokio-comp"] }
regex = "1.11.1"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "tls-rustls",
    "runtime-tokio",
    "bigdecimal",
    "time",
    "chrono",
] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }

[dev-dependencies]
lazy_static = "1.5.0"
serial_test = "3.2.0"
uuid = { version = "1.12.1", features = ["v4"] }
wiremock = "0.6.2"
